@@ -1,7 +1,7 @@
 # main Makefile.am for BBDB
 #
 # Copyright (C) 2013 Christian Egli <christian.egli@sbs.ch>
-#                    and Roland Winkler <winkler@@gnu.org>
+# Copyright (C) 2013-2014 Roland Winkler <winkler@gnu.org>
 #
 # This file is part of the Insidious Big Brother Database (aka BBDB),
 #
