@@ -7,7 +7,7 @@
 @copying
 This file documents the Insidious Big Brother Database (BBDB)
 
-Copyright (C) 2011-2013 Roland Winkler <winkler@@gnu.org>
+Copyright (C) 2011-2014 Roland Winkler <winkler@@gnu.org>
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
