@@ -1,5 +1,5 @@
 # Cheap BBDB makefile  -*- Makefile -*-
-# Copyright (C) 2010-2013 Roland Winkler <winkler@gnu.org>
+# Copyright (C) 2010-2014 Roland Winkler <winkler@gnu.org>
 # 
 # This file is part of the Insidious Big Brother Database (aka BBDB),
 # 
