@@ -1,6 +1,6 @@
 ### emacs_vm.m4
 
-## Copyright (C) 2013 Roland Winkler <winkler@gnu.org>
+## Copyright (C) 2013-2014 Roland Winkler <winkler@gnu.org>
 ##
 ## This file is part of the Insidious Big Brother Database (aka BBDB),
 ##
